--- a/npm/vue/package.json
+++ b/npm/vue/package.json
@@ -9,7 +9,9 @@
     "cy:run": "node ../../scripts/cypress.js run --component --project ${PWD}",
     "build": "rimraf dist && rollup -c rollup.config.mjs",
     "postbuild": "node --require @packages/ts/register ./inline-types.ts && node ../../scripts/sync-exported-npm-with-cli.js",
-    "typecheck": "yarn tsd && vue-tsc --noEmit",
+    "check-ts": "yarn tsd && vue-tsc --noEmit",
+    "typecheck": "yarn check-ts",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx,.json,.vue .",
     "test": "yarn cy:run",
     "tsd": "yarn build && yarn tsc -p test-tsd/tsconfig.tsd.json",
     "watch": "yarn build --watch --watch.exclude ./dist/**/*"
