--- a/npm/vue2/package.json
+++ b/npm/vue2/package.json
@@ -9,7 +9,9 @@
     "postbuild": "node ../../scripts/sync-exported-npm-with-cli.js",
     "build-prod": "yarn build",
     "test": "echo \"Tests for @cypress/vue2 are run from system-tests\"",
-    "watch": "yarn build --watch --watch.exclude ./dist/**/*"
+    "watch": "yarn build --watch --watch.exclude ./dist/**/*",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx,.json,.vue .",
+    "test-ci": "node ../../scripts/run-ct-examples.js --examplesList=./examples.env"
   },
   "dependencies": {
     "@vue/test-utils": "^1.1.3"
