--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -15,7 +15,8 @@
     "cypress:run:e2e": "yarn cypress:run-cypress-in-cypress node ../../scripts/cypress run --project .",
     "dev": "yarn cypress:run-cypress-in-cypress gulp dev --project .",
     "start": "echo \"run 'yarn dev' from the root\" && exit 1",
-    "watch": "echo \"run 'yarn dev' from the root\" && exit 1"
+    "watch": "echo \"run 'yarn dev' from the root\" && exit 1",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx,.json, ."
   },
   "dependencies": {},
   "devDependencies": {
