--- a/packages/launchpad/package.json
+++ b/packages/launchpad/package.json
@@ -15,7 +15,8 @@
     "cypress:run:e2e": "cross-env TZ=America/New_York node ../../scripts/cypress run --e2e --project .",
     "dev": "yarn gulp dev --project .",
     "start": "echo 'run yarn dev from the root' && exit 1",
-    "watch": "echo 'run yarn dev from the root' && exit 1"
+    "watch": "echo 'run yarn dev from the root' && exit 1",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx,.json, ."
   },
   "dependencies": {},
   "devDependencies": {
