refactor: update workspace to use lerna 6

--- a/package.json
+++ b/package.json
@@ -181,7 +181,7 @@
     "jscodemods": "https://github.com/cypress-io/jscodemods.git#01b546e",
     "jscodeshift": "0.7.0",
     "lazy-ass": "1.6.0",
-    "lerna": "3.20.2",
+    "lerna": "^6.0.1",
     "lint-staged": "11.1.2",
     "listr2": "3.8.3",
     "lodash": "^4.17.21",
@@ -191,6 +191,7 @@
     "mocha-junit-reporter": "2.1.0",
     "mocha-multi-reporters": "1.1.7",
     "mock-fs": "5.1.1",
+    "nx": "^15.0.4",
     "p-defer": "^3.0.0",
     "patch-package": "6.4.7",
     "playwright-webkit": "1.24.2",
